latest changes for user login

--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -5,6 +5,6 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/login.css' />
   <script src="/javascripts/vendor/jquery-3.3.1.min.js"></script>
+  <script src="/javascripts/product.js"></script>
   <script src="/javascripts/index.js"></script>
-  <script src="/javascripts/user.js"></script>
 </head>
