--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -24,11 +24,12 @@
                       <ul class="list-group category_block">
                           <li class="list-group-item"><a href="/users/profile">Profile Info</a></li>
                           <% if(userData.usertype == "seller") {%>
-                          <li class="list-group-item"><a href="/products/myproducts">My Product</a></li>
+                          <li class="list-group-item"><a href="/products/myproducts">Unsold Prodects</a></li>
+                          <li class="list-group-item"><a href="/products/purchased">Sold Product</a></li>
                           <li class="list-group-item active"><a href="/products/add">Add Product</a></li>
                           <% }%>
-                          <% if(userData.usertype == "buyer") {%>
-                          <li class="list-group-item"><a href="/products/buyingrecords">Buying Records</a></li>
+                          <% if(userData.usertype == "buyer" || userData.usertype == "seller") {%>
+                            <li class="list-group-item"><a href="/products/buyingrecords">Purchase History</a></li>
                           <% }%>
                       </ul>
                   </div>
