--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,8 +24,8 @@
                       <ul class="list-group category_block">
                           <li class="list-group-item active"><a href="/users/profile">Profile Info</a></li>
                           <% if(userData.usertype == "seller") {%>
-                            <li class="list-group-item"><a href="/products/myproducts">Listed Prodects</a></li>
-                            <li class="list-group-item"><a href="/products/purchased">Product Purchased</a></li>
+                            <li class="list-group-item"><a href="/products/myproducts">Unsold Prodects</a></li>
+                            <li class="list-group-item"><a href="/products/purchased">Sold Products</a></li>
                           <li class="list-group-item"><a href="/products/add">Add Product</a></li>
                           <% }%>
                           <% if(userData.usertype == "buyer" || userData.usertype == "seller") {%>
