--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,14 @@
+html {
+  height: 100%
+}
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image:url("/images/wallpapers.jpg"); background-repeat:no-repeat; background-position:center; background-size:cover; padding:10px;
+  /* background-image:url("/images/wallpapers.jpg"); */
+  /* background-repeat:no-repeat; background-position:center; */
+  /* background-size:cover;  */
+  background-color: #4C4660;
+  background-image: linear-gradient(to right, #4C4660 , #E6BFB8);
+  padding:10px;
 }
 a {
   color: #00B7FF;
