--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -1,5 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <title><%= title %></title>
   <link rel="stylesheet" href="/stylesheets/vendor/bootstrap.min.css" />
   <link rel='stylesheet' href='/stylesheets/style.css' />
