--- a/views/admintransactionhistory.ejs
+++ b/views/admintransactionhistory.ejs
@@ -33,7 +33,7 @@
                   <div class="row">
                       <div class="col-12">
                         <% if (transList && transList.length > 0) { %>
-                          <table class="table table-striped">
+                          <table class="table table-responsive w-100 d-block d-md-table">
                               <thead>
                                 <tr>
                                   <th>Product Name</th>
