--- a/views/buyingrecords.ejs
+++ b/views/buyingrecords.ejs
@@ -38,7 +38,7 @@
                   <div class="row">
                       <div class="col-12">
                         <% if (buyingList && buyingList.length > 0) { %>
-                          <table class="table table-striped">
+                          <table class="table table-responsive w-100 d-block d-md-table">
                               <thead>
                                 <tr>
                                   <th>Product Name</th>
