--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -26,15 +26,15 @@
                               <img class="card-img-top" src="<%= productDetail[0].image%>" alt="Card image cap">
                           </div>
                       </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 d-flex">
                             <div class="card">
-                                <div class="card-body">
+                                <div class="card-body flex-column d-flex">
                                     <h4 class="card-title"><%= productDetail[0].title%></h4>
                                     <h6 class="card-title">Category <%= productDetail[0].category%></h6>
                                     <h6 class="card-title">Used <%= productDetail[0].usedperiod%></h6>
                                     <h6 class="card-title">Delivery Method <%= productDetail[0].deliverymethod%></h6>                             
                                     <p class="card-text"><%= productDetail[0].desc%></p>
-                                    <div class="row">
+                                    <div class="row mt-auto">
                                         <div class="col">
                                             <p class="btn btn-danger btn-block"><%= productDetail[0].price%> RIM</p>
                                         </div>
