--- a/views/products.ejs
+++ b/views/products.ejs
@@ -44,13 +44,13 @@
                       <% 
                       if (productList) {
                       for(var i=0; i<productList.length; i++) {%>
-                          <div class="col-12 col-md-6 col-lg-4">
+                          <div class="col-12 col-md-6 col-lg-4 align-items-stretch d-flex top-b-p">
                               <div class="card">
-                                  <img class="card-img-top" src="<%= productList[i].image%>" alt="Card image cap">
-                                  <div class="card-body">
+                                  <img class="card-img-top card-img-list" src="<%= productList[i].image%>" alt="Card image cap">
+                                  <div class="card-body flex-column d-flex">
                                       <h4 class="card-title"><a href="/products/productdetail/<%= productList[i]._id%>" title="View Product"><%= productList[i].title%></a></h4>
                                       <p class="card-text"><%= productList[i].desc%></p>
-                                      <div class="row">
+                                      <div class="row mt-auto">
                                           <div class="col">
                                               <p class="btn btn-danger btn-block"><%= productList[i].price%> RIM</p>
                                           </div>
