--- a/views/buyproduct.ejs
+++ b/views/buyproduct.ejs
@@ -21,20 +21,20 @@
             <% if (productDetail && productDetail.length > 0) {%>
               <div class="col-12 col-md-12">
                   <div class="row">
-                      <div class="col-12 col-md-6">
-                          <div class="card">
+                      <div class="col-12 col-md-6 align-items-stretch d-flex">
+                          <div class="card flex-row">
                               <img class="card-img-top" src="<%= productDetail[0].image%>" alt="Card image cap">
                           </div>
                       </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 d-flex">
                             <div class="card">
-                                <div class="card-body">
+                                <div class="card-body flex-column d-flex">
                                     <h4 class="card-title"><%= productDetail[0].title%></h4>
                                     <h6 class="card-title">Category <%= productDetail[0].category%></h6>
                                     <h6 class="card-title">Used <%= productDetail[0].usedperiod%></h6> 
                                     <h6 class="card-title">Delivery Method <%= productDetail[0].deliverymethod%></h6>                                   
                                     <p class="card-text"><%= productDetail[0].desc%></p>
-                                    <div class="row">
+                                    <div class="row mt-auto">
                                         <% if (lessBalance == "yes") {%>
                                           <div class="col-12 col-sm-11 alert alert-danger">You have less Account Balance.</div>
                                         <% }%>
