--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -21,8 +21,8 @@
             <% if (productDetail && productDetail.length > 0) {%>
               <div class="col-12 col-md-12">
                   <div class="row">
-                      <div class="col-12 col-md-6">
-                          <div class="card">
+                      <div class="col-12 col-md-6 align-items-stretch d-flex">
+                          <div class="card flex-row">
                               <img class="card-img-top" src="<%= productDetail[0].image%>" alt="Card image cap">
                           </div>
                       </div>
